SERVER-75672 round to 15 digits when converting double to decimal for $add